testsuite/tests/typing-recovery/less_general.compilers.reference
File "less_general.ml", line 1:
Error: Multiple errors were encountered
File "less_general.ml", line 17, characters 27-43:
17 | let _less_general_1 = poly (fun x -> x + 1)
                                ^^^^^^^^^^^^^^^^
  This argument has type "int -> int" which is less general than "'a. 'a -> 'a"
File "less_general.ml", line 19, characters 13-58:
19 | let _ = poly (let r = ref None in fun x -> r := Some x; x)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  This argument has type "'b -> 'b" which is less general than "'a. 'a -> 'a"
File "less_general.ml", line 23, characters 12-17:
23 |   method id x = x
                 ^^^^^
  This method has type "'a -> 'a" which is less general than "'b. 'b -> 'a"
